Способы добавления стилей на страницу

--- a/ht.html
+++ b/ht.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <link href="cs.css" rel="stylesheet" >
+    <style>
+        h1 {
+            font-size: 120%;
+            font-family: Verdana, Arial, Helvetica, sans-serif;
+            color: #333366;
+        }
+    </style>
     <title></title>
 </head>
 <body>
-<h1>Флексагон</h1>
-<p>Флексагон представляет собой бумажную фигуру, которая имеет
+<h1 style="font-size: 36px; font-family: Times, serif; color: red">Флексагон</h1>
+<h1>Toje zagolovok</h1>
+<p style="font-size: 120%; font-family: monospace; color: #cd66cc">Флексагон представляет собой бумажную фигуру, которая имеет
     три и более стороны. Поначалу кажется, что это невозможно, но вспомните
     ленту Мёбиуса, она ведь имеет всего одну сторону, в отличие от листа  бумаги,
     и, тем не менее, реальна. Так же реален и флексагон, который легко сделать и
