--- a/ht.html
+++ b/ht.html
@@ -3,11 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <link href="cs.css" rel="stylesheet" >
+    <link media="print, handheld" rel="stylesheet" href="cs.css">
+    <link media="screen" rel="stylesheet" href="cs.css">
     <style>
         h1 {
             font-size: 120%;
             font-family: Verdana, Arial, Helvetica, sans-serif;
             color: #333366;
+        }
+        /*@import "cs.css" screen;*/
+        /*@import "cs.css" print, handheld;</title>*/
+
+        @media screen {
+            BODY {
+                font-family: Arial, Verdana, sans-serif;
+                font-size: 90%;
+                color: #000080;
+            }
+            H1 {
+                background: #faf0e6;
+                border: 2px dashed maroon;
+                color: #a0522d;
+                padding: 7px;
+            }
+            H2 {
+                color: #556b2f;
+                margin: 0;
+            }
+            P {
+                margin-top: 0.5em;
+            }
+        }
+        @media print {
+            BODY {
+                font-family: Times, 'Times New Roman', serif;
+            }
+            H1, H2, P {
+                color: black;
+            }
         }
     </style>
     <title></title>
@@ -23,5 +56,12 @@
     стоит согнуть его особым образом, и мы увидим третью сторону. Легко убедиться,
     что мы имеем дело именно с тремя сторонами, если раскрасить их в разные цвета.
     Перегибая флексагон, по очереди будем наблюдать все его поверхности.</p>
+<h1>Как поймать льва в пустыне</h1>
+<h2>Метод случайных чисел</h2>
+<p>Разделим пустыню на ряд элементарных прямоугольников, размер
+    которых совпадает с размером клетки для льва. После чего
+    перебираем полученные прямоугольники, каждый раз выбирая заданную
+    область случайным образом. Если в данной области окажется лев,
+    то мы поймаем его, накрыв клеткой.</p>
 </body>
 </html>
