Базовый синтаксис CSS

--- a/ht.html
+++ b/ht.html
@@ -3,44 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link href="cs.css" rel="stylesheet" >
-    <link media="print, handheld" rel="stylesheet" href="cs.css">
-    <link media="screen" rel="stylesheet" href="cs.css">
-    <style>
-        h1 {
-            font-size: 120%;
-            font-family: Verdana, Arial, Helvetica, sans-serif;
-            color: #333366;
-        }
-        /*@import "cs.css" screen;*/
-        /*@import "cs.css" print, handheld;</title>*/
 
-        @media screen {
-            BODY {
-                font-family: Arial, Verdana, sans-serif;
-                font-size: 90%;
-                color: #000080;
-            }
-            H1 {
-                background: #faf0e6;
-                border: 2px dashed maroon;
-                color: #a0522d;
-                padding: 7px;
-            }
-            H2 {
-                color: #556b2f;
-                margin: 0;
-            }
-            P {
-                margin-top: 0.5em;
-            }
-        }
-        @media print {
-            BODY {
-                font-family: Times, 'Times New Roman', serif;
-            }
-            H1, H2, P {
-                color: black;
-            }
+    <style>
+        h1 { color: #a6780a; font-weight: normal; }
+        h2 {
+            color: olive;
+            border-bottom: 2px solid black;
         }
     </style>
     <title></title>
@@ -63,5 +31,22 @@
     перебираем полученные прямоугольники, каждый раз выбирая заданную
     область случайным образом. Если в данной области окажется лев,
     то мы поймаем его, накрыв клеткой.</p>
+<table>
+    <tr>
+        <td>mgfbgf</td>
+        <td>hmvn bn</td>
+        <td>fngngfn</td>
+    </tr>
+    <tr>
+        <td>fdbcgngh</td>
+        <td>fnbnhjhg</td>
+        <td>hmhjhmg</td>
+    </tr>
+    <tr>
+        <td>gmghmghm</td>
+        <td>hgmghmh</td>
+        <td>hmghmghm</td>
+    </tr>
+</table>
 </body>
 </html>
