--- a/ht.html
+++ b/ht.html
@@ -3,14 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link href="cs.css" rel="stylesheet" >
-
-    <style>
-        h1 { color: #a6780a; font-weight: normal; }
-        h2 {
-            color: olive;
-            border-bottom: 2px solid black;
-        }
-    </style>
     <title></title>
 </head>
 <body>
@@ -31,21 +23,39 @@
     перебираем полученные прямоугольники, каждый раз выбирая заданную
     область случайным образом. Если в данной области окажется лев,
     то мы поймаем его, накрыв клеткой.</p>
-<table>
+
+<p>Для искусственного освещения помещения применяются люминесцентные лампы.
+    Они отличаются высокой световой отдачей, продолжительным сроком службы,
+    малой яркостью светящейся поверхности, близким к естественному спектральным
+    составом излучаемого света, что обеспечивает хорошую цветопередачу.</p>
+<p class="cite">Для исключения засветки экрана дисплея световыми потоками
+    оконные проемы снабжены светорассеивающими шторами.</p>
+<p class="warn">Согласно <span class="gost">ГОСТ 12.1.003-83 ССБТ &quot;Шум. Общие
+      требования безопасности&quot;</span>, шумовой характеристикой рабочих
+    мест при постоянном шуме являются уровни звуковых давлений в децибелах
+    в октавных полосах. Совокупность таких уровней называется
+    <b class="term">предельным спектром</b>, номер которого численно равен
+    уровню звукового давления в октавной полосе со среднегеометрической
+    частотой 1000&nbsp;Гц.
+</p>
+<table class="jewel">
     <tr>
-        <td>mgfbgf</td>
-        <td>hmvn bn</td>
-        <td>fngngfn</td>
+        <th>Название</th><th>Цвет</th><th>Твердость по Моосу</th>
+    </tr>
+    <tr class="odd">
+        <td>Алмаз</td><td>Белый</td><td>10</td>
     </tr>
     <tr>
-        <td>fdbcgngh</td>
-        <td>fnbnhjhg</td>
-        <td>hmhjhmg</td>
+        <td>Рубин</td><td>Красный</td><td>9</td>
+    </tr>
+    <tr class="odd">
+        <td>Аметист</td><td>Голубой</td><td>7</td>
     </tr>
     <tr>
-        <td>gmghmghm</td>
-        <td>hgmghmh</td>
-        <td>hmghmghm</td>
+        <td>Изумруд</td><td>Зеленый</td><td>8</td>
+    </tr>
+    <tr class="odd">
+        <td>Сапфир</td><td>Голубой</td><td>9</td>
     </tr>
 </table>
 </body>
