--- a/ht.html
+++ b/ht.html
@@ -23,7 +23,12 @@
     перебираем полученные прямоугольники, каждый раз выбирая заданную
     область случайным образом. Если в данной области окажется лев,
     то мы поймаем его, накрыв клеткой.</p>
-
+<div id="help">
+    <p id="opa">Параграф необычный</p>
+    Этот элемент помогает в случае, когда вы находитесь в осознании того
+    факта, что совершенно не понимаете, кто и как вам может помочь. Именно
+    в этот момент мы и подсказываем, что помочь вам никто не сможет.
+</div>
 <p>Для искусственного освещения помещения применяются люминесцентные лампы.
     Они отличаются высокой световой отдачей, продолжительным сроком службы,
     малой яркостью светящейся поверхности, близким к естественному спектральным
