--- a/ht.html
+++ b/ht.html
@@ -8,6 +8,12 @@
 <body>
 <h1 style="font-size: 36px; font-family: Times, serif; color: red">Флексагон</h1>
 <h1>Toje zagolovok</h1>
+<div class="menu">
+    <a href="http://htmlbook.ru/1.html">Русская кухня</a> |
+    <a href="http://htmlbook.ru/2.html">Украинская кухня</a> |
+    <a href="http://htmlbook.ru/3.html">Кавказская кухня</a>
+</div>
+<p><a href="http://htmlbook.ru/text.html">Другие материалы по теме</a></p>
 <p style="font-size: 120%; font-family: monospace; color: #cd66cc">Флексагон представляет собой бумажную фигуру, которая имеет
     три и более стороны. Поначалу кажется, что это невозможно, но вспомните
     ленту Мёбиуса, она ведь имеет всего одну сторону, в отличие от листа  бумаги,
@@ -62,6 +68,7 @@
     <tr class="odd">
         <td>Сапфир</td><td>Голубой</td><td>9</td>
     </tr>
+
 </table>
 </body>
 </html>
