--- a/ht.html
+++ b/ht.html
@@ -14,6 +14,8 @@
     <a href="http://htmlbook.ru/3.html">Кавказская кухня</a>
 </div>
 <p><a href="http://htmlbook.ru/text.html">Другие материалы по теме</a></p>
+<p>Lorem <b>ipsum </b> dolor sit amet, <i>consectetuer</i> adipiscing elit.</p>
+<p>Lorem ipsum dolor sit amet, <i>consectetuer</i> adipiscing elit.</p>
 <p style="font-size: 120%; font-family: monospace; color: #cd66cc">Флексагон представляет собой бумажную фигуру, которая имеет
     три и более стороны. Поначалу кажется, что это невозможно, но вспомните
     ленту Мёбиуса, она ведь имеет всего одну сторону, в отличие от листа  бумаги,
@@ -22,13 +24,22 @@
     стоит согнуть его особым образом, и мы увидим третью сторону. Легко убедиться,
     что мы имеем дело именно с тремя сторонами, если раскрасить их в разные цвета.
     Перегибая флексагон, по очереди будем наблюдать все его поверхности.</p>
-<h1>Как поймать льва в пустыне</h1>
-<h2>Метод случайных чисел</h2>
-<p>Разделим пустыню на ряд элементарных прямоугольников, размер
-    которых совпадает с размером клетки для льва. После чего
-    перебираем полученные прямоугольники, каждый раз выбирая заданную
-    область случайным образом. Если в данной области окажется лев,
-    то мы поймаем его, накрыв клеткой.</p>
+<h1 class="lev">Методы ловли льва в пустыне</h1>
+<h2 class="lev">Метод последовательного перебора</h2>
+<p class="lev">Пусть лев имеет габаритные размеры L x W x H, где L - длина льва
+    от кончика носа до кисточки хвоста, W - ширина льва, а H - его высота.
+    После чего пустыню разбиваем на ряд элементарных прямоугольников, размер
+    которых совпадает с шириной и длиной льва. Учитывая, что лев может находиться
+    не строго на заданном участке, а одновременно на двух из них, клетку для
+    ловли следует делать повышенной площади, а именно 2L x 2W. Благодаря
+    этому мы избежим ошибки, когда в клетке окажется пойманным лишь половина
+    льва или, что хуже, только его хвост.</p>
+<h2 class="sic">Важное замечание</h2>
+<p class="lev">Для упрощения расчетов хвост в качестве погрешности измерения можно
+    отбросить и не принимать во внимание.</p>
+<p class="lev">Далее последовательно накрываем каждый из размеченных прямоугольников
+    пустыни клеткой и проверяем, пойман лев или нет. Как только лев окажется в
+    клетке, процедура поимки считается завершенной.</p>
 <div id="help">
     <p id="opa">Параграф необычный</p>
     Этот элемент помогает в случае, когда вы находитесь в осознании того
