--- a/ht.html
+++ b/ht.html
@@ -8,12 +8,6 @@
 <body>
 <h1 style="font-size: 36px; font-family: Times, serif; color: red">Флексагон</h1>
 <h1>Toje zagolovok</h1>
-<div class="menu">
-    <a href="http://htmlbook.ru/1.html">Русская кухня</a> |
-    <a href="http://htmlbook.ru/2.html">Украинская кухня</a> |
-    <a href="http://htmlbook.ru/3.html">Кавказская кухня</a>
-</div>
-<p><a href="http://htmlbook.ru/text.html">Другие материалы по теме</a></p>
 <p>Lorem <b>ipsum </b> dolor sit amet, <i>consectetuer</i> adipiscing elit.</p>
 <p>Lorem ipsum dolor sit amet, <i>consectetuer</i> adipiscing elit.</p>
 <p style="font-size: 120%; font-family: monospace; color: #cd66cc">Флексагон представляет собой бумажную фигуру, которая имеет
@@ -79,7 +73,31 @@
     <tr class="odd">
         <td>Сапфир</td><td>Голубой</td><td>9</td>
     </tr>
-
+    <ul id="menu">
+        <li>Правка
+            <ul>
+                <li><a href="#">Отменить</a></li>
+                <li><a href="#">Вырезать</a></li>
+                <li><a href="#">Копировать</a></li>
+                <li><a href="#">Вставить</a></li>
+            </ul>
+        </li>
+        <li>Начертание
+            <ul>
+                <li><a href="#">Жирное</a></li>
+                <li><a href="#">Курсивное</a></li>
+                <li><a href="#">Подчеркнутое</a></li>
+            </ul>
+        </li>
+        <li>Размер
+            <ul>
+                <li><a href="#">Маленький</a></li>
+                <li><a href="#">Нормальный</a></li>
+                <li><a href="#">Средний</a></li>
+                <li><a href="#">Большой</a></li>
+            </ul>
+        </li>
+    </ul>
 </table>
 </body>
 </html>
