--- a/ht.html
+++ b/ht.html
@@ -8,6 +8,11 @@
 <body>
 <h1 style="font-size: 36px; font-family: Times, serif; color: red">Флексагон</h1>
 <h1>Toje zagolovok</h1>
+<p><a href="http://htmlbook.ru">Обычная ссылка</a> |
+    <a href="http://localhost:63342/css/ht.html" target="_blank">Ссылка в новом окне</a></p>
+<p><a href="http://www.htmlbook.ru/html/">Теги HTML</a> |
+    <a href="http://stepbystep.htmlbook.ru">Шаг за шагом</a> |
+    <a href="http://webimg.ru">Графика для Веб</a></p>
 <p>Lorem <b>ipsum </b> dolor sit amet, <i>consectetuer</i> adipiscing elit.</p>
 <p>Lorem ipsum dolor sit amet, <i>consectetuer</i> adipiscing elit.</p>
 <p style="font-size: 120%; font-family: monospace; color: #cd66cc">Флексагон представляет собой бумажную фигуру, которая имеет
@@ -18,6 +23,20 @@
     стоит согнуть его особым образом, и мы увидим третью сторону. Легко убедиться,
     что мы имеем дело именно с тремя сторонами, если раскрасить их в разные цвета.
     Перегибая флексагон, по очереди будем наблюдать все его поверхности.</p>
+<div class="block-menuz-therm">
+    <h2>Термины</h2>
+    <div class="content">
+        <ul class="menuz">
+            <li><a href="https://vk.com/id86405092?z=photo86405092_304753739%2Fphotos86405092">Буквица</a></li>
+            <li><a href="https://vk.com/id86405092?z=photo86405092_304753339%2Fphotos86405092">Выворотка</a></li>
+            <li><a href="https://vk.com/id86405092?z=photo86405092_304753081%2Fphotos86405092">Выключка</a></li>
+            <li><a href="https://vk.com/id86405092?z=photo86405092_304752901%2Fphotos86405092">Интерлиньяж</a></li>
+            <li><a href="https://vk.com/id86405092?z=photo86405092_288690584%2Fphotos86405092">Капитель</a></li>
+            <li><a href="https://vk.com/id86405092?z=photo86405092_288690492%2Fphotos86405092">Начертание</a></li>
+            <li><a href="https://vk.com/id86405092?z=photo86405092_176334533%2Fphotos86405092">Отбивка</a></li>
+        </ul>
+    </div>
+</div>
 <h1 class="lev">Методы ловли льва в пустыне</h1>
 <h2 class="lev">Метод последовательного перебора</h2>
 <p class="lev">Пусть лев имеет габаритные размеры L x W x H, где L - длина льва
@@ -35,7 +54,6 @@
     пустыни клеткой и проверяем, пойман лев или нет. Как только лев окажется в
     клетке, процедура поимки считается завершенной.</p>
 <div id="help">
-    <p id="opa">Параграф необычный</p>
     Этот элемент помогает в случае, когда вы находитесь в осознании того
     факта, что совершенно не понимаете, кто и как вам может помочь. Именно
     в этот момент мы и подсказываем, что помочь вам никто не сможет.
@@ -54,6 +72,11 @@
     уровню звукового давления в октавной полосе со среднегеометрической
     частотой 1000&nbsp;Гц.
 </p>
+<p>Продолжая известный закон Мерфи, который гласит: <q>Если неприятность
+    может случиться, то она обязательно случится</q>, можем ввести свое наблюдение:
+    <q title="Из законов Фергюссона-Мержевича">После того, как веб-страница
+        будет корректно отображаться в одном браузере, выяснится,
+        что она неправильно показывается в другом</q>.</p>
 <table class="jewel">
     <tr>
         <th>Название</th><th>Цвет</th><th>Твердость по Моосу</th>
@@ -73,31 +96,7 @@
     <tr class="odd">
         <td>Сапфир</td><td>Голубой</td><td>9</td>
     </tr>
-    <ul id="menu">
-        <li>Правка
-            <ul>
-                <li><a href="#">Отменить</a></li>
-                <li><a href="#">Вырезать</a></li>
-                <li><a href="#">Копировать</a></li>
-                <li><a href="#">Вставить</a></li>
-            </ul>
-        </li>
-        <li>Начертание
-            <ul>
-                <li><a href="#">Жирное</a></li>
-                <li><a href="#">Курсивное</a></li>
-                <li><a href="#">Подчеркнутое</a></li>
-            </ul>
-        </li>
-        <li>Размер
-            <ul>
-                <li><a href="#">Маленький</a></li>
-                <li><a href="#">Нормальный</a></li>
-                <li><a href="#">Средний</a></li>
-                <li><a href="#">Большой</a></li>
-            </ul>
-        </li>
-    </ul>
+
 </table>
 </body>
 </html>
