--- a/ht.html
+++ b/ht.html
@@ -23,7 +23,10 @@
     стоит согнуть его особым образом, и мы увидим третью сторону. Легко убедиться,
     что мы имеем дело именно с тремя сторонами, если раскрасить их в разные цвета.
     Перегибая флексагон, по очереди будем наблюдать все его поверхности.</p>
-
+<form action="">
+    <p><input type="text" value="Черный текст"></p>
+    <p><input type="text" value="Черный текст"></p>
+</form>
 <h1 class="lev">Методы ловли льва в пустыне</h1>
 <h2 class="lev">Метод последовательного перебора</h2>
 <p class="lev">Пусть лев имеет габаритные размеры L x W x H, где L - длина льва
@@ -83,7 +86,9 @@
     <tr class="odd">
         <td>Сапфир</td><td>Голубой</td><td>9</td>
     </tr>
-
+    <p>Цитата на французском языке: <q lang="fr">Ce que femme veut,Dieu le veut</q>.</p>
+    <p>Цитата на немецком: <q lang="de">Der Mensch, versuche die Gotter nicht</q>.</p>
+    <p>Цитата на английском: <q lang="en">То be or not to be</q>.</p>
 </table>
 </body>
 </html>
