--- a/ht.html
+++ b/ht.html
@@ -89,6 +89,7 @@
     <p>Цитата на французском языке: <q lang="fr">Ce que femme veut,Dieu le veut</q>.</p>
     <p>Цитата на немецком: <q lang="de">Der Mensch, versuche die Gotter nicht</q>.</p>
     <p>Цитата на английском: <q lang="en">То be or not to be</q>.</p>
+    <p class="new">Ловля льва в пустыне с помощью метода золотого сечения.</p>
 </table>
 </body>
 </html>
