--- a/ht.html
+++ b/ht.html
@@ -62,6 +62,16 @@
     уровню звукового давления в октавной полосе со среднегеометрической
     частотой 1000&nbsp;Гц.
 </p>
+<p>Цвет текста этого абзаца синий.</p>
+<p class="red">А у этого абзаца цвет текста уже другой.</p>
+<table cellpadding="4" cellspacing="0" class="two">
+    <tr>
+        <td>Ячейка 1</td><td>Ячейка 2</td>
+    </tr>
+    <tr>
+        <td>Ячейка 3</td><td>Ячейка 4</td>
+    </tr>
+</table>
 <p>Продолжая известный закон Мерфи, который гласит: <q>Если неприятность
     может случиться, то она обязательно случится</q>, можем ввести свое наблюдение:
     <q title="Из законов Фергюссона-Мержевича">После того, как веб-страница
@@ -89,7 +99,7 @@
     <p>Цитата на французском языке: <q lang="fr">Ce que femme veut,Dieu le veut</q>.</p>
     <p>Цитата на немецком: <q lang="de">Der Mensch, versuche die Gotter nicht</q>.</p>
     <p>Цитата на английском: <q lang="en">То be or not to be</q>.</p>
-    <p class="new">Ловля льва в пустыне с помощью метода золотого сечения.</p>
+    <p> class="new">Ловля льва в пустыне с помощью метода золотого сечения.</p>
 </table>
 </body>
 </html>
