--- a/ht.html
+++ b/ht.html
@@ -64,14 +64,13 @@
 </p>
 <p>Цвет текста этого абзаца синий.</p>
 <p class="red">А у этого абзаца цвет текста уже другой.</p>
-<table cellpadding="4" cellspacing="0" class="two">
-    <tr>
-        <td>Ячейка 1</td><td>Ячейка 2</td>
-    </tr>
-    <tr>
-        <td>Ячейка 3</td><td>Ячейка 4</td>
-    </tr>
-</table>
+<div id="menu">
+    <ul>
+        <li>Первый</li>
+        <li class="two">Второй</li>
+        <li>Третий</li>
+    </ul>
+</div>
 <p>Продолжая известный закон Мерфи, который гласит: <q>Если неприятность
     может случиться, то она обязательно случится</q>, можем ввести свое наблюдение:
     <q title="Из законов Фергюссона-Мержевича">После того, как веб-страница
